// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCard Component should allow being disabled: disabled 1`] = `""`;

exports[`GraphCard Component should render a basic component: basic 1`] = `
<Fragment>
  <GraphCardMetrics
    metricFilters={
      Array [
        Object {
          "id": "Core-seconds",
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "strokeWidth": 2,
        },
      ]
    }
    useProductGraphConfig={[Function]}
  />
</Fragment>
`;

exports[`GraphCard Component should setup basic settings: settings 1`] = `
<Fragment>
  <GraphCardMetrics
    metricFilters={
      Array [
        Object {
          "id": "Core-seconds",
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "strokeWidth": 2,
        },
      ]
    }
    useProductGraphConfig={[Function]}
  />
  <GraphCardMetric
    key="graphCard_Sockets"
    metricFilter={
      Object {
        "id": "Sockets",
        "isStacked": true,
        "isStandalone": true,
        "isThreshold": false,
        "strokeWidth": 2,
      }
    }
    useProductGraphConfig={[Function]}
  />
</Fragment>
`;
